--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>Supply</groupId>
 	<artifactId>Supply</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Selenide Supply</name>
+	<name>Supply</name>
 	
 	<repositories>
 	<repository>
@@ -14,8 +15,8 @@
 </repositories>
 
 	<properties>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<appium.version>3.3.0</appium.version>
@@ -41,8 +42,16 @@
     <version>3.10.1</version>
 </dependency>
 	
-	
-	
+
+<!-- https://mvnrepository.com/artifact/ru.sbtqa/monte-media -->
+<dependency>
+    <groupId>ru.sbtqa</groupId>
+    <artifactId>monte-media</artifactId>
+    <version>1.0.0</version>
+</dependency>
+
+
+
 	
 		<!-- testng -->
 		<dependency>
@@ -70,11 +79,19 @@
 
 
 <dependency>
-    <groupId>com.googlecode.json-simple</groupId>
-    <artifactId>json-simple</artifactId>
-    <version>1.1.1</version>
+    <groupId>com.github.stephenc.monte</groupId>
+    <artifactId>monte-screen-recorder</artifactId>
+    <version>0.7.7.0</version>
 </dependency>
 		
+		
+		
+		<!-- https://mvnrepository.com/artifact/ru.sbtqa/monte-media -->
+<dependency>
+    <groupId>ru.sbtqa</groupId>
+    <artifactId>monte-media</artifactId>
+    <version>1.0.1</version>
+</dependency>
 		
 		
 		
@@ -111,10 +128,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.16</version>
+				<version>2.4</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>testng0.xml</suiteXmlFile>
+						<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
