--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>Supply</groupId>
 	<artifactId>Supply</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Supply</name>
+	<name>Selenide Supply</name>
 	
 	<repositories>
 	<repository>
@@ -15,23 +14,23 @@
 </repositories>
 
 	<properties>
-		<maven.compiler.source>1.7</maven.compiler.source>
-		<maven.compiler.target>1.7</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<appium.version>3.3.0</appium.version>
+	
 		<testng.version>6.9.10</testng.version>
 	</properties>
 	<dependencies>
 
-	
-	<dependency>
+
+<!-- https://mvnrepository.com/artifact/com.codeborne/selenide -->
+<dependency>
     <groupId>com.codeborne</groupId>
     <artifactId>selenide</artifactId>
-    <version>5.0.1</version>
-    <scope>test</scope>
+    <version>5.1.0</version>
 </dependency>
-	
+
 	
 	
 	
@@ -42,16 +41,8 @@
     <version>3.10.1</version>
 </dependency>
 	
-
-<!-- https://mvnrepository.com/artifact/ru.sbtqa/monte-media -->
-<dependency>
-    <groupId>ru.sbtqa</groupId>
-    <artifactId>monte-media</artifactId>
-    <version>1.0.0</version>
-</dependency>
-
-
-
+	
+	
 	
 		<!-- testng -->
 		<dependency>
@@ -78,20 +69,8 @@
 
 
 
-<dependency>
-    <groupId>com.github.stephenc.monte</groupId>
-    <artifactId>monte-screen-recorder</artifactId>
-    <version>0.7.7.0</version>
-</dependency>
+
 		
-		
-		
-		<!-- https://mvnrepository.com/artifact/ru.sbtqa/monte-media -->
-<dependency>
-    <groupId>ru.sbtqa</groupId>
-    <artifactId>monte-media</artifactId>
-    <version>1.0.1</version>
-</dependency>
 		
 		
 		
@@ -128,10 +107,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.4</version>
+				<version>2.16</version>
 				<configuration>
 					<suiteXmlFiles>
-						<suiteXmlFile>testng.xml</suiteXmlFile>
+						<suiteXmlFile>testng0.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
